# ASCAS-frontend

./: .gitignore  README.md  package-lock.json
Backend/: coordinates.py  model_testing.py  tle_data_fetch  transformer.py
backend_project/: tle_data.py  tle_new.py
project/: alternate.py  equation.py  generate.py  integrate.py  main.py  pyproject.toml  requirements.txt  risk_factor.py  tle.py
project/data/: risk_hte.csv  train_risk.csv  val_risk.csv
vite-project/: .gitattributes  .gitignore  package-lock.json  package.json
vite-project/src/: App.jsx  App_new.jsx  Navbar.jsx  main.jsx  style.css  threevector.js
