[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.1.6",
    "datetime>=5.5",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "numpy>=2.1.3",
    "requests>=2.32.3",
    "sgp4>=2.23",
]
